# Stellar-MarketPay-

./: .gitignore  CONTRIBUTING.md  LICENSE  ONBOARDING_IMPLEMENTATION.md  README.md  REALTIME_BID_COMPARISON_PR.md  ROADMAP.md  docker-compose.prod.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: check-openapi-docs.yml  ci.yml  deploy-production.yml
backend/: .env.example  package-lock.json  package.json
backend/src/: server.js
contracts/arbitrator-registry/: Cargo.toml
contracts/arbitrator-registry/src/: lib.rs
contracts/arbitrator-registry/test_snapshots/tests/: test_admin_remove_arbitrator.1.json  test_admin_set_minimum_stake.1.json  test_dao_register_arbitrator.1.json  test_dao_remove_arbitrator.1.json  test_double_registration_fails.1.json  test_double_registration_panics.1.json  test_initialize.1.json  test_initializes_with_default_stake.1.json  test_insufficient_stake_fails.1.json  test_multiple_arbitrators.1.json  test_register_deregister.1.json
contracts/marketpay-contract/: Cargo.toml  Makefile  README.md
docs/: api.md  architecture.md
frontend/: .eslintrc.json  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/__tests__/: XlmPriceWidget.test.tsx  fetchXlmPriceHistory.property.test.ts  fetchXlmPriceHistory.test.ts
frontend/components/: ApplicationForm.tsx  ClientSpendingTab.tsx  JobCard.tsx  JobStatusTimeline.tsx  MobileTabBar.tsx  Navbar.tsx  PostJobForm.tsx  PostJobFormtypes.ts  (+4 more)
infra/: README.md
scripts/: deploy-contract.sh  setup-dev.sh
(+91 files in other folders)
